# AI-Engineering-From-Scratch

./: .gitignore  README.md  pyproject.toml
gpu-available/: index.py
note-book/: index.ipynb
notes/: 1.phase1.md  2.usingnotebook.md
src/aiml/: __init__.py
