[project]
name = "aiml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TenzDelek", email = "tibetdelek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]

[project.scripts]
aiml = "aiml:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
